### PyDrizzle Revision Changes
Version 5.1.3 (30-August-2004) WJH
      - Eliminated generation of context image for single drizzling.
Version 5.1.2 (30-August-2004) CJH
      - Update to fileutil.py
        Detchip object cast as string before attempt to call isdigit() method.
Version 5.1.1 (27-August-2004) CJH
      - Update to fileutil.py
        Added support for dealing with an 'ANY' DETCHIP value in and IDCTAB.
Version 5.1.0 (24-August-2004) WJH
      - (OPR 51892)
        Corrected problem with processing HRC data where a DGEOFILE has been
        specified.  This problem involved looking for CCDCHIP in the extension
        header of the DGEOFILE and defaulting to a value of 1 if not found, instead of
        'None'.
      - WFPC2 theta values now get passed along correctly after being read in
        an OFFTAB, instead of being overwritten with a value of 0.0.  
Version 5.0.23 (24-August-2004) CJH
      -  The application of the VA factor is now multiplicative instead of 
         exponential in nature.
Version 5.0.20 (12-July-2004) WJH
      - (OPR 51654)
        Exposure class logic for recognizing DGEOFILE name of 'N/A' and passing
        it on as blank to 'drizzle' was corrected.
Version 5.0.19 (9-July-2004) WJH
      - 'fileutil.findFile' made more general with the ability to determine
        whether the file with a given extension exists, not just the filename
        itself.  
      - Modified 'findDQName' for WFPCObservation class to set dq_extname 
        to 'sdq,1' if input is FITS file.
Version 5.0.18 (2-July-2004) WJH
      - Updated ImType class to support different files for SCI and DQ
        arrays, such as those for WFPC2 data.
      - Changed 'buildShadowMaskImage' to only append '.c1h' to filename
        when it was not a FITS image, based on presence of .fits.
      - Added '_findDQFile' method to WFPC2Observation class to reset the
        ImType class attributes for WFPC2 data to be consistent with both