@@ -1,6 +1,11 @@
 ### PyDrizzle Revision Changes
 Version 5.1.3 (30-August-2004) WJH
       - Eliminated generation of context image for single drizzling.
+      - Changed usage of chip for 'computeCubicCoeffs' to rely instead on
+        detector as the key, so that chip does not get redefined. This allows
+        STIS data to pick up the correct plate scale,... for all its detectors
+        and allows STIS coeffs files to be named 'coeffs1',... like all other
+        detectors. This routine gets used by WFPC2 and NICMOS as well.
 Version 5.1.2 (30-August-2004) CJH
       - Update to fileutil.py
         Detchip object cast as string before attempt to call isdigit() method.
